[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/soldier/Die/SD_04.png" type="Texture" id=1]
[ext_resource path="res://assets/soldier/Walk/SW_07.png" type="Texture" id=2]
[ext_resource path="res://assets/soldier/Die/SD_02.png" type="Texture" id=3]
[ext_resource path="res://assets/soldier/Die/SD_01.png" type="Texture" id=4]
[ext_resource path="res://assets/soldier/Die/SD_03.png" type="Texture" id=5]
[ext_resource path="res://assets/soldier/Shot/Soldier Shot.png" type="Texture" id=6]
[ext_resource path="res://assets/soldier/Walk/SW_02.png" type="Texture" id=7]
[ext_resource path="res://assets/soldier/Walk/SW_04.png" type="Texture" id=8]
[ext_resource path="res://assets/soldier/Walk/SW_01.png" type="Texture" id=9]
[ext_resource path="res://assets/soldier/Walk/SW_03.png" type="Texture" id=10]
[ext_resource path="res://assets/soldier/Walk/SW_06.png" type="Texture" id=11]
[ext_resource path="res://assets/soldier/Walk/SW_05.png" type="Texture" id=12]
[ext_resource path="res://assets/soldier/Idle/Soldier.png" type="Texture" id=13]
[ext_resource path="res://scenes/Enemy.gd" type="Script" id=14]
[ext_resource path="res://scenes/HPBar.gd" type="Script" id=15]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": false,
"name": "die",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 10.1944
height = 4.63671

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 16 )

[node name="Soldier" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 14 )

[node name="FireTimer" type="Timer" parent="."]

[node name="FirePosition" type="Node2D" parent="."]
position = Vector2( 17, 3 )

[node name="AimTimer" type="Timer" parent="."]

[node name="AnimatedSprites" type="Node2D" parent="."]

[node name="LegAnimatedSprite" type="AnimatedSprite" parent="AnimatedSprites"]
rotation = -1.5708
frames = SubResource( 1 )
animation = "idle"

[node name="BodyAnimatedSprite" type="AnimatedSprite" parent="AnimatedSprites"]
rotation = -1.5708
frames = SubResource( 2 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.20486, 0.157492 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="HPBar" type="ProgressBar" parent="."]
margin_left = -20.0
margin_top = -28.0
margin_right = 17.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 4 )
rounded = true
percent_visible = false
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="timeout" from="AimTimer" to="." method="_on_AimTimer_timeout"]
